Fix landing input form on Firefox. Improve forms homogeneity for traditionnal pages.

--- a/server/public/stylesheets/landing.less
+++ b/server/public/stylesheets/landing.less
@@ -15,9 +15,17 @@
       border: 0;
       background-color: @cl-background;
       .ft-opensans;
-      text-transform: uppercase;
-      padding: 14px 14px 14px 48px;
+      padding: 4px 14px 4px 48px;
       color: @cl-second;
+    }
+    ::-webkit-input-placeholder {
+      text-transform: uppercase;
+    }
+    ::-moz-placeholder {
+      text-transform: uppercase;
+    }
+    :-ms-input-placeholder {
+      text-transform: uppercase;
     }
   }
 
